force-app/main/default/objects/Person__c/fields/About_you__c.field-meta.xml
<CustomField>
    <fullName>About_you__c</fullName>
    <description>Enter something about you</description>
    <inlineHelpText>Allows to enter up to 131,072 characters on separate lines.</inlineHelpText>
    <label>About you</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>