force-app/main/default/objects/Person__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Enter your address</description>
    <inlineHelpText>Current address should be entered</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>