force-app/main/default/objects/Person__c/fields/Anything_more__c.field-meta.xml
<CustomField>
    <fullName>Anything_more__c</fullName>
    <description>Add something to display</description>
    <inlineHelpText>Allows to enter formatted text, add images and links. Up to 131,072 characters on separate lines.</inlineHelpText>
    <label>Anything more</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>