force-app/main/default/objects/Person__c/fields/Current_City__c.field-meta.xml
<CustomField>
    <fullName>Current_City__c</fullName>
    <description>Enter your current city</description>
    <inlineHelpText>Enter your current city or nearby city</inlineHelpText>
    <label>Current City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>