force-app/main/default/objects/Person__c/fields/Current_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_Time__c</fullName>
    <description>Enter current date and time</description>
    <inlineHelpText>Accepts date and time format</inlineHelpText>
    <label>Current Date Time</label>
    <type>DateTime</type>
</CustomField>