force-app/main/default/objects/Person__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <description>Enter coordinates</description>
    <inlineHelpText>Latitudes and Longitudes needed</inlineHelpText>
    <label>Current Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>