force-app/main/default/objects/Person__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Date of Birth</description>
    <inlineHelpText>Accepts as date input</inlineHelpText>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>