force-app/main/default/objects/Person__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Enter your email id</description>
    <inlineHelpText>Need to be in &quot;example@email.com&quot; format</inlineHelpText>
    <label>email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>