force-app/main/default/objects/Person__c/fields/Free_Time__c.field-meta.xml
<CustomField>
    <fullName>Free_Time__c</fullName>
    <description>Enter the time at which you are free.</description>
    <inlineHelpText>Accepts only in time format</inlineHelpText>
    <label>Free Time</label>
    <type>Time</type>
</CustomField>