force-app/main/default/objects/Person__c/fields/isEducated__c.field-meta.xml
<CustomField>
    <fullName>isEducated__c</fullName>
    <description>Checks whether person is educated properly</description>
    <formula>IF( Percent__c &gt; 40, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEducated</label>
    <type>Checkbox</type>
</CustomField>