force-app/main/default/objects/Person__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Click if you are above 18 years</description>
    <inlineHelpText>Checks for age</inlineHelpText>
    <label>Major</label>
    <type>Checkbox</type>
</CustomField>