force-app/main/default/objects/Person__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Enter your mobile number</description>
    <inlineHelpText>Should be only in number</inlineHelpText>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>