force-app/main/default/objects/Person__c/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <description>Has net worth of a person</description>
    <inlineHelpText>Accepts only in numbers</inlineHelpText>
    <label>Net Worth</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>