force-app/main/default/objects/Person__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <description>Enter the card number</description>
    <inlineHelpText>Allows to enter any combination of letters and numbers and store them in encrypted form.</inlineHelpText>
    <label>PAN</label>
    <length>10</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>