force-app/main/default/objects/Person__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <description>Enter any marks percent</description>
    <inlineHelpText>Should be decimal number</inlineHelpText>
    <label>Percent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>