force-app/main/default/objects/Person__c/fields/Preffered_Places__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Places__c</fullName>
    <description>Select your preferred locations</description>
    <inlineHelpText>Locations</inlineHelpText>
    <label>Preferred Places</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>