force-app/main/default/objects/Person__c/fields/Sno__c.field-meta.xml
<CustomField>
    <fullName>Sno__c</fullName>
    <description>Serial Number</description>
    <displayFormat>P-{00}</displayFormat>
    <inlineHelpText>It auto-generates continuous numbers.</inlineHelpText>
    <label>Sno</label>
    <type>AutoNumber</type>
</CustomField>